--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,22 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    "extends": "standard-with-typescript",
-    "overrides": [
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true
+  },
+    "plugins": ["prettier", "import"],
+    "extends": [
+        "plugin:prettier/recommended",
+        "prettier"
     ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
+
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
     "rules": {
+        "no-debugger": "off",
+        "no-console": 0,
+        "class-methods-use-this": "off"
     }
 }
