--- a/package.json
+++ b/package.json
@@ -24,21 +24,25 @@
   "homepage": "https://github.com/DrobyshSV/online-store#readme",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "@webpack-cli/generators": "^3.0.1",
     "ajv": "^7.2.4",
     "autoprefixer": "^10.4.13",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.29.0",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
-    "prettier": "^2.8.1",
+    "prettier": "2.8.1",
     "sass": "^1.56.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
@@ -50,7 +54,6 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
-    "ajv-dist": "^8.11.2",
-    "eslint-webpack-plugin": "^3.2.0"
+    "ajv-dist": "^8.11.2"
   }
 }
